src/styles/global.css
/*──────────────────────────────
  DOCUMENT
──────────────────────────────*/
body {
    background-color: white;
    color: black;
    font-family: "Be Vietnam Pro", sans-serif;
}

* {
    font-weight: 300;
}

html { 
    scroll-behavior: smooth;
} 

/*──────────────────────────────
  NAV SECTION
──────────────────────────────*/
.nav_root {
    width: 100%;
}

.nav_bar {
    width: 1200px;
    justify-content: space-between;
    height: 100%;
    overflow: visible;
}

.nav_menu {
    align-items: center;
    height: 100%;
    margin-block: var(--space-md);

    .nav_link {
        font-weight: var(--font-weight-reg);
        border: none;
        background-color: transparent;
        padding-top: var(--space-sm);
        font-size: var(--font-size-md);
        line-height: calc(var(--font-size-md) * 1.6);
        color: var(--color-alt-dark);
    }

    .nav_contact_text {
        text-wrap-mode: nowrap;
        font-weight: var(--font-weight-reg);
        letter-spacing: var(--kerning-lg);
        color: var(--color-alt-dark);
        text-transform: capitalize;
    }
}

.nav_logo_wrapper.nav_logo_wrapper {
    margin-block: auto;
    height:3rem;
    overflow: visible;
}

.logo {
    max-width: 3rem;
}

.nav_bar .nav_logo--hidden-on-scroll {
    opacity: 0;
    pointer-events: none;
    display: none;
}

.nav_bar .nav_menu--hidden-on-scroll {
    opacity: 0;
    pointer-events: none;
    display: none;
}

.nav_bar .nav_toggle--visible {
    border: none;
    box-sizing: border-box;
    background-color: var(--color-text);
    padding-inline: var(--space-md);
    padding-block: var(--space-sm);
    /* fixed button height, otherwise collapses, content renders as 0px */
    min-height: 2.5rem;
}

.nav_bar .nav_toggle--visible .nav_toggle_text--open {
    display: inline-block;
    color: var(--color-bg);
    letter-spacing: var(--kerning-lg);
    text-transform: uppercase;
}

.nav_bar .nav_toggle--hidden {
    opacity: 0;
    pointer-events: none;
    display: none;
}

.nav_overlay.nav_overlay {
    position: fixed;
    inset: 0;
    background: var(--color-text);
    z-index: 99999999999999999999999999999999;

    .nav_link_overlay {
        font-weight: var(--font-weight-reg);
        border: none;
        background-color: transparent;
        padding: 0rem;
        color: var(--color-bg);
        font-size: var(--font-size-4xl);
        line-height: calc(var(--font-size-3xl) * 1.6);
        text-align: left;
    }

    .contact_overlay {
        font-weight: var(--font-weight-reg);
        border: none;
        padding: 0rem;
        color: var(--color-bg);
        font-size: var(--font-size-4xl);
        line-height: calc(var(--font-size-3xl) * 1.6);
    }

    .nav_links_overlay_container {
        align-content: end;
    }

    .nav_links_container {
        font-size: var(--font-size-lg);
        line-height: calc(var(--font-size-lg) * 1.6);
        color: var(--color-bg);
    }

    .nav_overlay_close_container {
        align-content: end;
    }

    .nav_close_toggle {
        font-size: var(--font-size-lg);
        line-height: calc(var(--font-size-lg) * 1.6);
        color: var(--color-bg);
    }
}

/*──────────────────────────────
  GLOBAL STYLES
──────────────────────────────*/
.button_primary_container {
    padding-inline: var(--space-md);
    padding-block: var(--space-sm);
    background-color: var(--color-text);
    color: var(--color-bg);
}

.button_primary_text.button_primary_text {
    letter-spacing: 1px;
    color: var(--color-bg);
}

.button_secondary_container {
    padding-block: var(--space-sm);
    padding-inline: 0px;
    width: fit-content;
    border: none;
    border-bottom: 1px solid var(--color-text);
    background-color: transparent;
}

.button_secondary_text.button_secondary_text {
    letter-spacing: var(--kerning-lg);
    font-size: var(--font-size-lg);
    line-height: calc(var(--font-size-md) * 1.6);
    font-weight: var(--font-weight-reg);
    color: var(--color-alt-dark);
    text-wrap-mode: nowrap;
}

.paragraph--sm { 
    color: var(--color-alt-dark)
}

.paragraph--md { 
    color: var(--color-alt-dark)
}

.paragraph--lg { 
    color: var(--color-alt-dark)
}

.modal--closed {
    display: none;
}

.modal--open {
    display: block;
}

/* .modal_backdrop {
    global styles
}

.modal_content_container {
    global styles
} */

/*──────────────────────────────
  CONTACT MODAL
──────────────────────────────*/
.contact_modal_wrapper.contact_modal_wrapper {
    justify-content: flex-end;

    .contact_modal_grid {
        height: 100vh;
        width: 600px;
        max-width: 90vw;
        max-height: 90vh;
        background-color: var(--color-text);
    }
}

.contact_me_modal_heading.contact_me_modal_heading {
    color: var(--color-bg);
    font-weight: var(--font-weight-reg);
    letter-spacing: var(--kerning-lg);
    text-transform: capitalize;
}

.contact_me_modal_text.contact_me_modal_text {
    color: rgba(255,255,255,0.8);
}

.contact_me_modal_link {
    color: var(--color-bg);
    font-size: var(--font-size-lg);
}

.button_container--ghost--dark {
    border: 1px solid var(--color-bg);
    padding-inline: var(--space-md);
    padding-block: var(--space-sm);
    background-color: transparent;
    color: var(--color-bg);
}

/*──────────────────────────────
  HERO SECTION
──────────────────────────────*/
.section_hero {
    height: 100vh;
}

.hero_grid {
    height: 100vh;
}

.display-grid { 
    display: grid; 
}

.gap-lg { 
    gap: var(--space-lg); 
}

.home_page {
    display: flex;
    flex-direction: column;
    gap: var(--space-6xl);
}

.hero_gridwrap_fullname {
    align-content: end;
}

.hero_value_statement {
    width: 20rem;
}

.hero_socials {
    align-items: center;
}

.hero_image_container {
    background-color: #FAFAFA;
}

.hero_image { 
    width: 100%;
    height: 100%;
 }

 /*──────────────────────────────
  TAGLINE SECTION
──────────────────────────────*/
.section_tagline.section_tagline {
    padding-top: 0rem;
    padding-left: 0rem;
}

.tagline_text {
    text-transform: uppercase;
    text-wrap-mode: nowrap;
    color: var(--color-alt-light);
}

.tagline_text.tagline--lg {
    font-size: var(--font-size-4xl);
    opacity: 0.3;
}

/*──────────────────────────────
  VALUE PROPOSITION SECTION
──────────────────────────────*/
.problem_statement {
    font-weight: 500;
}

.heading_sm {
    font-size: var(--font-size-4xl);
    display: inline-block;
    line-height: 1;
}

.values {
    align-content: center;
}

.values_container {
    flex-wrap: wrap;
}

.why_me {
    max-width: 460px;
}

.button_wrapper {
    justify-self: end;
}

.values_titles {
    font-weight: var(--font-weight-reg);
}

/*──────────────────────────────
  CAPABILITIES SECTION
──────────────────────────────*/
.section_build {
    height: 100vh;
}

.build_wrapper {
    align-content: center;
}

.heading_build {
    text-wrap-mode: nowrap;
}

.build_card {
    border-bottom: 1px solid var(--color-alt-light);
    padding-bottom: var(--space-md);
    min-height: var(--space-3xl);
}

.build_title {
    font-weight: var(--font-weight-reg);
    text-wrap-mode: nowrap;
    min-width: 406px;
}

/*──────────────────────────────
  WORKS SECTION
──────────────────────────────*/
.section_works{
    height: 100vh;
}

.works_grid {
    height: 100%;
}

.project_card { 
    height: 100%; 
}

.project_card_heading_container { 
    padding: var(--space-sm); 
    display: flex; 
    align-items: end;
}

.project_card_heading { 
    color: var(--color-bg);
}

.project_card_text_container { 
    padding: var(--space-sm); 
    display: flex; 
    justify-content: end;
}

.project_card_text { 
    color: var(--color-bg);
}

.project_card_image-wrapper {
  height: 100%;
}

.project_card_image { 
    width: 100%;
}

/*──────────────────────────────
  CASE STUDY SECTION
──────────────────────────────*/
.section_case_study {
    margin-top: var(--space-6xl);
}

.case_study_heading_container {
    margin-bottom: var(--space-xl);
}

.sidebar_wrapper {
    height: 100%;
}

.sidebar_container {
    position: sticky;
    top: var(--space-3xl);
    height: 90vh;
    justify-content: space-between;
}

.return_container {
    border-bottom: 1px solid var(--color-alt-light);
}

.return_button {
        border: none;
        background-color: transparent;
        padding: 0rem;

        p {
            font-weight: var(--font-weight-md); 
            font-size: var(--font-size-lg);
            color: var(--color-alt-dark);
            line-height: calc(var(--font-size-lg) * 1.6);
            letter-spacing: var(--kerning-lg);
        }
    }

.project_title {
    color: var(--color-alt-light);
}

.project_links_container .project_title--active {
    color: var(--color-text);
    font-size: var(--font-size-2xl-int);
    
}

.case_study_links_container {
    justify-content: end;
    color: var(--color-alt-light);
}

.case_study_content_container {
    padding-inline: var(--space-2xl);
}

/*──────────────────────────────
  ABOUT SECTION
──────────────────────────────*/
.section_about {
    height: 100vh;
}

.about_grid {
    height: 100%;
}

.about_button_wrapper {
    justify-content: end;

    .button {
        justify-self: end;
        border-left: none;
        border-top: none;
        border-right: none;
        border-bottom: 1px solid var(--color-alt-dark);
        background-color: transparent;
        padding-inline: 0rem;
        
    }    
}

.about_modal {
    .modal_content_container {
        height: 100%;
        width: 1200px;
        max-width: 90vw;
        max-height: 90vh;
    } 
}

.about_me_modal_button_wrapper {
    align-content: end;

    .about_me_modal_button {
        width: 100%;
    }

    .button_primary_text {
        color: var(--color-bg);
        letter-spacing: 1px;
    }
}

.about_me_modal_grid_container {
    height: 100%;
}

/*──────────────────────────────
  FOOTER SECTION
──────────────────────────────*/
.section_footer {
    height: 100vh;
}

.footer_cta_container {
    text-align: center;
}

.footer_cta_text {
    font-weight: var(--font-weight-reg);
}

.footer_content_wrapper {
    height: 100%;
}

.footer_image_container {
    height: 100%;
}

.footer_main_text.footer_main_text {
    max-width: 50%;
    letter-spacing: var(--kerning-lg);
}

.footer_tagline {
    align-content: flex-end;
}

.footer_links_wrapper{
    padding-bottom: var(--space-md);
    align-content: end;
}

.footer_links_container {
    max-width: 100%;
    justify-content: space-between;
}

.footer_link {
    font-weight: var(--font-weight-med);
}

